replaced sample content with minimum viable own content
Signed-off-by: Konstantin Läufer <klaeufer@gmail.com>

--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,8 +1,12 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@PhDThesis{Laufer_Thesis_1992,
+        AUTHOR             = {L{\"{a}}ufer, K.},
+        KEY                = {lau92},
+        MONTH              = jul,
+        NOTE               = {Available as Technical Report 622, December
+                              1992, from New York University, Department of 
+                              Computer Science},
+        SCHOOL             = {New York University},
+        TITLE              = {Polymorphic Type Inference and Abstract 
+                              Data Types},
+        YEAR               = {1992}
 }
