fixed several bibentries
Signed-off-by: Konstantin Läufer <laufer@cs.luc.edu>

--- a/content/publication/ball-2003-method-1/cite.bib
+++ b/content/publication/ball-2003-method-1/cite.bib
@@ -1,8 +1,9 @@
 @patent{ball2003method1,
  author = {Ball, Thomas J and Danielsen, Peter John and Jagadeesan, Lalita Jategaonkar and Läufer, Konstantin and Mataga, Peter Andrew and Rehor, Kenneth G},
- month = {March~4},
+ month = {March},
  note = {US Patent 6,529,863},
  title = {Method and apparatus for providing interactive services with multiple interfaces},
+ url = {https://patents.google.com/patent/US6529863B1},
  year = {2003}
 }
 
