--- a/content/publication/dblp-journalstoplas-laufer-o-94/cite.bib
+++ b/content/publication/dblp-journalstoplas-laufer-o-94/cite.bib
@@ -7,6 +7,7 @@ Martin Odersky},
  journal = {ACM Trans. Program. Lang. Syst.},
  number = {5},
  pages = {1411--1430},
+ pdf = {https://dl.acm.org/doi/pdf/10.1145/186025.186031},
  timestamp = {Thu, 14 Oct 2021 01:00:00 +0200},
  title = {Polymorphic Type Inference and Abstract Data Types},
  url = {https://doi.org/10.1145/186025.186031},
