--- a/content/publication/ball-2003-method-2/cite.bib
+++ b/content/publication/ball-2003-method-2/cite.bib
@@ -1,8 +1,9 @@
 @patent{ball2003method2,
  author = {Ball, Thomas J and Danielsen, Peter John and Jagadeesan, Lalita Jategaonkar and Läufer, Konstantin and Mataga, Peter Andrew and Rehor, Kenneth G},
- month = {March~4},
+ month = {March},
  note = {US Patent 6,609,089},
  title = {Method and apparatus for providing interactive services with multiple interfaces},
+ url = {https://patents.google.com/patent/US6609089B1},
  year = {2003}
 }
 
