--- a/content/publication/saleem-siddiqui-2021/cite.bib
+++ b/content/publication/saleem-siddiqui-2021/cite.bib
@@ -4,6 +4,7 @@
  note = {Foreword by Konstantin Läufer},
  publisher = {O'Reilly Media, Inc.},
  title = {Learning Test-Driven Development},
+ url = {https://learning.oreilly.com/library/view/learning-test-driven-development/9781098106461/foreword01.html},
  year = {2021}
 }
 
